// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input.File should display name for selected file 1`] = `
<label
  class="css-nc1f5d"
>
  <input
    class="css-38lglc"
    type="file"
  />
  <span />
  <span
    class="css-av1h6s"
  >
    TestFileName
  </span>
  <span
    aria-label="remove-icon"
    class="css-5bno9x"
    height="12"
    width="12"
  />
</label>
`;

exports[`Input.File should render the file input element 1`] = `
<label
  class="css-nc1f5d"
>
  <input
    class="css-38lglc"
    type="file"
  />
  <span />
  <span
    class="css-av1h6s"
  >
    select
  </span>
</label>
`;
